--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -198,6 +198,40 @@ span.navbar-text {
 	height: 100%;
 	position: absolute;
 }
+
+.navbar-text input[type=submit]{
+  font-weight: 700;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 18px 34px;
+  font-size: 18px;
+  margin-left: 18px;
+	position: relative;
+	background-color: transparent;
+	transition: 0.3s ease-in-out;
+}
+.navbar-text input[type=submit]::before {
+  content: "";
+  width: 0%;
+  height: 100%;
+  position: absolute;
+  background-color: #fff;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  transition: 0.3s ease-in-out;
+}
+
+.navbar-text input[type=submit]:hover {
+  color: #8f14dc;
+}
+.navbar-text input[type=submit]:hover::before {
+	content: "";
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+
 nav.navbar .navbar-toggler:active,
 nav.navbar .navbar-toggler:focus {
 	outline: none;
@@ -466,13 +500,37 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 .form-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh; /* Full viewport height */
+  font-size: 1.5rem; /* Makes text larger */
+  padding: 20px; /* Adds space inside the container */
+  width: 100%; /* Ensures the form takes up more space horizontally */
+}
+
+.form-container label {
+  font-size: 1.2rem; /* Increase label size */
+}
+.form-container textarea{
+  
+}
+.form-container input {
+  width: 300px; /* Adjust the input fields to be larger */
+  padding: 10px; /* Add padding to make the input fields bigger */
+  font-size: 1.2rem; /* Increases font size for the input text */
 }
 
 form {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.input[type=text]{
+  width: 100%;
+  padding: 20px 20px;
+}
+
+.input[type=submit]{
+  background-color: purple;
 }
