Made entire websit mobile-friendly.

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -19,7 +19,7 @@
 * {
   margin: 0;
   padding: 0;
-  ox-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
@@ -280,14 +280,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 /************ Banner Css ************/
-.banner {
-  margin-top: 0;
-  padding: 260px 0 100px 0;
-  background-image: url('./Assets/Images/banner-bg.png');
-  background-position: top center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
+
 .banner .tagline {
   font-weight: 700;
   letter-spacing: 0.8px;
@@ -306,6 +299,15 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin-bottom: 20px;
   display: block;
 }
+
+.mobile-banner h1{
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 1;
+  margin-bottom: 20px;
+  display: block;
+}
 .banner p {
   color: #B8B8B8;
   font-size: 18px;
@@ -317,7 +319,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   color: #fff;
   font-weight: 700;
   font-size: 20px;
-  margin-top: 60px;
+  margin-top: 30px;
   letter-spacing: 0.8px;
   display: flex;
   align-items: center;
@@ -532,4 +534,40 @@ form {
 
 .input[type=submit]{
   background-color: purple;
+}
+
+.mobile-video-container {
+  position: relative;
+  width: 100%; /* Adjusts to the container width */
+  padding-top: 56.25%; /* 16:9 Aspect Ratio (height/width * 100) */
+  margin: 20px 0; /* Optional: adds some space above and below the video */
+}
+
+.mobile-video-container img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.mobile-video-container iframe{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.mobile-image-container {
+  position: relative;
+  width: 100%; /* Adjusts to the container width */
+  padding-top: 0%; /* 16:9 Aspect Ratio (height/width * 100) */
+  margin: 20px 0; /* Optional: adds some space above and below the video */
+}
+.mobile-image-container img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
